--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,18 @@
 {
   "name": "social-media",
   "version": "1.0.0",
-  "description": "",
+  "description": "Web-based social media app",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.2"
-  }
+    "cors": "^2.8.5",
+    "mongoose": "^7.5.2",
+    "dotenv": "^16.4.1"
+  },
+  "author": "Your Name",
+  "license": "ISC"
 }
